# Fmodl

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dream/fmodl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: dream.cpp
app/src/main/java/com/dream/fmodl/: FmodUtils.java  MainActivity.java  Utils.java
app/src/main/res/drawable/: ic_account_box_black_24dp.xml
app/src/main/res/layout/: activity_main.xml  item.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
app/src/test/java/com/dream/fmodl/: ExampleUnitTest.java
